infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexushr-ingress
  namespace: nexushr
spec:
  ingressClassName: nginx
  rules:
    - host: nexushr.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nexushr-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexushr-frontend
                port:
                  number: 80
